Curriculum Associates Careers - Infrastructure Security Engineer.       Junior Security Analyst (Fixed Term – 6 months) - FlexTrade     . Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online. Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online. CrowdStrike Careers - Security Analyst. Kenna Security - Software Engineer. Logitech Careers - IT Security Operations Analyst. Security Analyst - SOC | Trustwave Careers. Application Security Engineer | Shulman Fleming &amp; Partners. Cyber Security Operations Center (CSOC) Engineer - MITRE Careers. Job @ Capmo (Munich): QA & Security Engineer (m/f/d) | JOIN. Sr IT Security Architect - Florida Blue Careers. Anitian  Security Engineer | SmartRecruiters. Cyber Security Data Analytics Engineer - MITRE Careers. ServiceNow Careers - Senior Security Risk Engineer. Freelancer.com - Jobs: Security Engineer - Apply online. Zycus - Jobs: Application Security Architect (Java) - Apply online. Zycus - Jobs: Application Security Architect (Java) - Apply online. Computer Consultants International, Inc. Business Security Analyst (Job ID: 602170) | SmartRecruiters. Harmonic Inc. Careers - Sr. Network & Security Engineer. Arthur Grand Technologies Inc Cyber Security System Analyst | SmartRecruiters. Arthur Grand Technologies Inc Security Systems Analyst ( TS clearance & security + must) | SmartRecruiters. Security Analyst I - The Federal Reserve System Careers. Flywire Cyber Security Analyst | SmartRecruiters. PerimeterX - Cyber Security Analyst. MindPoint Group, LLC Cloud Security Engineer | SmartRecruiters. Lloyd Staffing Security Engineer (Firewall) | SmartRecruiters. Associate Network Security Engineer - MacStadium - Career Page. Job Application for Information Security Engineer at Globality, Inc.. Tyro - Security Team Lead - Engineering. QuintoAndar - Jobs: Information Security Analyst - Apply online. Job Application for DevOps Security Engineer  at Curology. Job Application for Sr. DevOps Security Enginee

--- a/security.html
+++ b/security.html
@@ -120,7 +120,7 @@ to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/harmonic/job/oM2tafwb'>Harmonic Inc. Careers - Sr. Network & Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/harmonic/job/oM2tafwb'>Harmonic Inc. Careers - Sr. Network & Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... In the context of IT network and security team enforcement, Harmonic recruits a 
 senior Network and Security engineer to deliver network and security services to
@@ -142,7 +142,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/perimeterx/84a37b49-2d8e-432c-9096-cc56f7a3f1b9'>PerimeterX - Cyber Security Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/perimeterx/84a37b49-2d8e-432c-9096-cc56f7a3f1b9'>PerimeterX - Cyber Security Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -162,7 +162,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tyro/f1be29da-750b-4b0d-b205-241500cc09a5'>Tyro - Security Team Lead - Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tyro/f1be29da-750b-4b0d-b205-241500cc09a5'>Tyro - Security Team Lead - Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -218,7 +218,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ironnet/job/ooBCafwv'>IronNet Cybersecurity Careers - Senior Software Engineer - Hybrid Cloud</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ironnet/job/ooBCafwv'>IronNet Cybersecurity Careers - Senior Software Engineer - Hybrid Cloud</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -274,7 +274,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/aewtmybow96skb6659d8yt6a7a'>Security Architect  | JFR Staffing</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/aewtmybow96skb6659d8yt6a7a'>Security Architect  | JFR Staffing</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -314,7 +314,7 @@ Wilmington, Delaware. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Kitchener-Waterloo Canada Kitchener-Waterloo Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ironbrick/job/o7svafwY'>IronBrick Careers - Cisco Enterprise Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ironbrick/job/o7svafwY'>IronBrick Careers - Cisco Enterprise Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -381,7 +381,7 @@ today!</p>
 <p>4 days ago ... Cybersecurity Analyst. Key Role: Provide detection, identification, and reporting 
 of possible Cyber-attacks and intrusions, anomalous activities, and misuse?...</p>
 <hr/>
-<h5><a href='https://oath.wd5.myworkdayjobs.com/careers/job/US---Sunnyvale/Paranoids-Senior-Enterprise-Security-Engineer_JR0010822'>Paranoids Senior Enterprise Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oath.wd5.myworkdayjobs.com/careers/job/US---Sunnyvale/Paranoids-Senior-Enterprise-Security-Engineer_JR0010822'>Paranoids Senior Enterprise Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Paranoids Senior Insider Threat Analyst | US - Sunnyvale, More... Paranoids 
 Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...</p>
@@ -398,7 +398,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light">New York San Francisco</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/mattermost/29b85d07-c7f1-4ec5-80f3-a2f9ff4ac4ab'>Mattermost - Security Engineer, Infrastructure &amp; Operations (Remote)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/29b85d07-c7f1-4ec5-80f3-a2f9ff4ac4ab'>Mattermost - Security Engineer, Infrastructure &amp; Operations (Remote)</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -414,7 +414,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/94410120-ffae-4e18-9f6b-32dbcb22bc5a'>Mattermost - Product Security Engineer (Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/mattermost/94410120-ffae-4e18-9f6b-32dbcb22bc5a'>Mattermost - Product Security Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -443,7 +443,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p>Jul 9, 2019 ... Reston, VA is now hiring a Systems Security Engineer in Reston, Virginia. 
 Review all of the job details and apply today!</p>
 <hr/>
-<h5><a href='https://careers-draper.icims.com/jobs/3821/group-leader---hardware-security-engineering/job'>Group Leader - Hardware Security Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-draper.icims.com/jobs/3821/group-leader---hardware-security-engineering/job'>Group Leader - Hardware Security Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... We are seeking an enthusiastic well rounded Embedded Systems Engineer to 
 lead the Mixed-Signal Design Group. This is an electrical design engineering?...</p>
